--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="symbolism-box">
               <h2 class="heading">Symbolism</h2>
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb1.png" alt="symb1.png">
@@ -284,7 +284,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb2.png" style="width: 80%" alt="symb2.png">
@@ -293,7 +293,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb3.png" alt="symb1.png">
@@ -302,7 +302,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb4.png" alt="symb1.png">
@@ -311,7 +311,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb5.png" alt="symb2.png">
@@ -320,7 +320,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb6.png" alt="symb1.png">
@@ -329,7 +329,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb7.png" alt="symb1.png">
@@ -338,7 +338,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb8.png" alt="symb2.png">
@@ -347,7 +347,7 @@
                     <p class="symbol-p">Tag1, Tag2, <br> Tag3</p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col">
                   <div class="symbol-box text-center">
                     <div class="symbol-img">
                       <img src="./assets/images/symb9.png" alt="symb1.png">
