--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="types-box">
               <h4 class="box-heading">Types</h4>
               <div class="row">
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box enchanlers">
                       <p class="box-text">1</p>
@@ -42,7 +42,7 @@
                     <p class="title">enchanlers</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box peacocks">
                       <p class="box-text">3</p>
@@ -50,7 +50,7 @@
                     <p class="title">peacocks</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box atmos">
                       <p class="box-text">8</p>
@@ -58,7 +58,7 @@
                     <p class="title">atmos</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box alchemists">
                       <p class="box-text">8</p>
@@ -66,7 +66,7 @@
                     <p class="title">alchemists</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box snakes">
                       <p class="box-text">3</p>
@@ -74,7 +74,7 @@
                     <p class="title">snakes</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box berzerkers">
                       <p class="box-text">4</p>
@@ -82,7 +82,7 @@
                     <p class="title">berzerkers</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box gardeners">
                       <p class="box-text">6</p>
@@ -90,7 +90,7 @@
                     <p class="title">gardeners</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box fairies">
                       <p class="box-text">3</p>
@@ -98,7 +98,7 @@
                     <p class="title">fairies</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box razens">
                       <p class="box-text">3</p>
@@ -106,7 +106,7 @@
                     <p class="title">razens</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box mebusinas">
                       <p class="box-text">8</p>
@@ -114,7 +114,7 @@
                     <p class="title">mebusinas</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box morphos">
                       <p class="box-text">9</p>
@@ -122,7 +122,7 @@
                     <p class="title">morphos</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box mothcts">
                       <p class="box-text">9</p>
@@ -135,7 +135,7 @@
             <div class="stats-box">
               <h4 class="box-heading">Stats</h4>
               <div class="row">
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box enchanlers">
                       <p class="box-text">1</p>
@@ -143,7 +143,7 @@
                     <p class="title">GQ</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box peacocks">
                       <p class="box-text">2</p>
@@ -151,7 +151,7 @@
                     <p class="title">GQ In</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box atmos">
                       <p class="box-text">3</p>
@@ -159,7 +159,7 @@
                     <p class="title">GQ Out</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box alchemists">
                       <p class="box-text">11</p>
@@ -167,7 +167,7 @@
                     <p class="title">BQ</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box snakes">
                       <p class="box-text">72</p>
@@ -175,7 +175,7 @@
                     <p class="title">Height</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box berzerkers">
                       <p class="box-text">51</p>
@@ -183,7 +183,7 @@
                     <p class="title">Weight</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box gardeners">
                       <p class="box-text">77</p>
@@ -191,7 +191,7 @@
                     <p class="title">Speed</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box fairies">
                       <p class="box-text">30</p>
@@ -199,7 +199,7 @@
                     <p class="title">HP</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box razens">
                       <p class="box-text">72</p>
@@ -207,7 +207,7 @@
                     <p class="title">Attack</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box mebusinas">
                       <p class="box-text">51</p>
@@ -215,7 +215,7 @@
                     <p class="title">Defance</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box morphos">
                       <p class="box-text">77</p>
@@ -223,7 +223,7 @@
                     <p class="title">Attack+</p>
                   </div>
                 </div>
-                <div class="col-lg-3 col-4">
+                <div class="col-lg-3 col-4 col-sm-3">
                   <div class="boxes">
                     <div class="box mothcts">
                       <p class="box-text">30</p>
@@ -253,19 +253,19 @@
             <p class="description-text">Quote text quote text quote text quote text quote text quote text quote text
               quote text quote text quote text quote text quote text quote text quote text quote text </p>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-sm-4">
                 <div class="text-box">
                   <h4 class="text-box-title">Upwards</h4>
                   <p class="text-box-p">Tag1, Tag2, <br> Tag3</p>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-sm-4">
                 <div class="text-box">
                   <h4 class="text-box-title">Reverse</h4>
                   <p class="text-box-p">Tag1, Tag2, <br> Tag3</p>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-sm-4">
                 <div class="text-box">
                   <h4 class="text-box-title">Immune</h4>
                   <p class="text-box-p">Tag1, Tag2, <br> Tag3</p>
